update common-pkg using vendor

--- a/common-pkg/page-b.html
+++ b/common-pkg/page-b.html
@@ -3,5 +3,5 @@ page b
 
 <div id="main"></div>
 
-<script src="jquery.js"></script>
-<script src="page-a.js"></script>
+<script src="vendor.bundle.js"></script>
+<script src="page-b.js"></script>
