--- a/common-pkg/page-a.html
+++ b/common-pkg/page-a.html
@@ -3,5 +3,5 @@ page a
 
 <div id="main"></div>
 
-<script src="jquery.js"></script>
+<script src="vendor.bundle.js"></script>
 <script src="page-a.js"></script>
