--- a/react/index.html
+++ b/react/index.html
@@ -8,7 +8,9 @@
 <body>
 
     <div id="example"></div>
+
     <link rel="stylesheet" href="index.css">
+    <script src="https://a.alipayobjects.com/react/0.12.2/react.js"></script>
     <script src="index.js"></script>
 
 </body>
