fix react example

--- a/react/index.html
+++ b/react/index.html
@@ -10,6 +10,7 @@
     <div id="example"></div>
 
     <link rel="stylesheet" href="index.css">
+    <script src="https://a.alipayobjects.com/react/0.13.2/react.js"></script>
     <script src="index.js"></script>
 
 </body>
